tdf#137777 Writer: fix keyboard navigation of Navigator

This patch:

-Splits the first row of the Navigator panel into four toolbar controls
to make keyboard navigation possible.

-Makes an Escape key press, when focus is in the sidebar Navigator
'Navigate By' control, result in keyboard focus on the content panel
title, which in the Navigator deck/panel case is the deck title bar.

-Fixes spacing issues of first row controls.

Gtk3 has problems with focusing to title bar and wrapping keyboard
focus. This has been left to be fixed by a separate patch.

Change-Id: Ic9d3a35f2b8c31a209947a1fe61094ddafee4f42